--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
+      name="The Solana Multi-Index Liquidity Endowment"
       content="Mint Page"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
